--- a/surgery.html
+++ b/surgery.html
@@ -35,7 +35,7 @@
         color: var(--text-color);
         line-height: 1.6;
         overflow-x: hidden;
-        background-color: #fff;
+        background-color: rgba(243, 109, 109, 0.2);
         padding-top: 80px;
       }
 
