update cardiologist page

--- a/cardiology.html
+++ b/cardiology.html
@@ -119,6 +119,7 @@
         visibility: hidden;
         transition: var(--transition);
         z-index: 1;
+        margin-top: 30px;
       }
 
       .dropdown:hover .dropdown-content {
@@ -778,7 +779,10 @@
               <li><a href="cardiology.html">قسم القلب</a></li>
               <li><a href="emergency.html">قسم الطوارئ</a></li>
               <li><a href="surgery.html">قسم الجراحة</a></li>
+              <li><a href="orthopedics.html">قسم العظام</a></li>
+              <li><a href="pediatrics.html">قسم الأطفال</a></li>
               <li><a href="radiology.html">قسم الأشعة</a></li>
+              <li><a href="laboratory.html">المختبر والتحاليل</a></li>
             </ul>
           </div>
 
