--- a/surgery.html
+++ b/surgery.html
@@ -156,8 +156,8 @@
       /* أنماط الصفحة الداخلية */
       .department-header {
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-          url("https://source.unsplash.com/random/1600x900/?emergency")
-            no-repeat center center/cover;
+          url("assets/img/Surgery/Surgery\ \(2\).jpg") no-repeat center
+            center/cover;
         height: 400px;
         display: flex;
         align-items: center;
