update Orthopedic page

--- a/orthopedics.html
+++ b/orthopedics.html
@@ -157,8 +157,8 @@
       /* أنماط الصفحة الداخلية - نفس أنماط صفحة القلب */
       .department-header {
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-          url("https://source.unsplash.com/random/1600x900/?orthopedics")
-            no-repeat center center/cover;
+          url("assets/img/Orthopedic/Orthopedic\ .jpg") no-repeat center
+            center/cover;
         height: 400px;
         display: flex;
         align-items: center;
