--- a/pediatrics.html
+++ b/pediatrics.html
@@ -156,8 +156,8 @@
       /* أنماط الصفحة الداخلية - نفس أنماط صفحة القلب */
       .department-header {
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-          url("https://source.unsplash.com/random/1600x900/?pediatrics")
-            no-repeat center center/cover;
+          url("assets/img/pediatrics/pediatrics.jpg") no-repeat center
+            center/cover;
         height: 400px;
         display: flex;
         align-items: center;
