update emargency and surgery page

--- a/emergency.html
+++ b/emergency.html
@@ -386,7 +386,7 @@
         content: "";
         position: absolute;
         bottom: 0;
-        left: 0;
+        right: 0;
         width: 50px;
         height: 2px;
         background: var(--primary-color);
@@ -634,10 +634,7 @@
           </div>
 
           <div class="department-image" data-aos="fade-left">
-            <img
-              src="https://source.unsplash.com/random/600x400/?emergency,medical"
-              alt="قسم الطوارئ"
-            />
+            <img src="assets/img/Emergency/emgdoc.jpg" alt="قسم الطوارئ" />
           </div>
         </div>
 
@@ -646,7 +643,7 @@
         <div class="services-grid">
           <div class="service-card" data-aos="fade-up" data-aos-delay="100">
             <img
-              src="https://source.unsplash.com/random/600x400/?emergency,room"
+              src="assets/img/Emergency/hospital-room.jpg"
               alt="العناية الفورية"
               class="service-img"
             />
@@ -662,7 +659,7 @@
 
           <div class="service-card" data-aos="fade-up" data-aos-delay="200">
             <img
-              src="https://source.unsplash.com/random/600x400/?trauma"
+              src="assets/img/Emergency/trauma room.jpg"
               alt="غرفة الصدمات"
               class="service-img"
             />
@@ -678,7 +675,7 @@
 
           <div class="service-card" data-aos="fade-up" data-aos-delay="300">
             <img
-              src="https://source.unsplash.com/random/600x400/?ambulance"
+              src="assets/img/Emergency/ambulance.jpg"
               alt="خدمة الإسعاف"
               class="service-img"
             />
@@ -703,7 +700,7 @@
         <div class="doctors-grid">
           <div class="doctor-card" data-aos="fade-up" data-aos-delay="100">
             <img
-              src="https://source.unsplash.com/random/600x800/?doctor,male"
+              src="assets/img/doc 1.jpg"
               alt="د. علي حسين"
               class="doctor-img"
             />
@@ -720,7 +717,7 @@
 
           <div class="doctor-card" data-aos="fade-up" data-aos-delay="200">
             <img
-              src="https://source.unsplash.com/random/600x800/?doctor,female"
+              src="assets/img/doc 2.jpg"
               alt="د. نادية عبد الله"
               class="doctor-img"
             />
@@ -737,7 +734,7 @@
 
           <div class="doctor-card" data-aos="fade-up" data-aos-delay="300">
             <img
-              src="https://source.unsplash.com/random/600x800/?doctor"
+              src="assets/img/doc 3.jpg"
               alt="د. محمد السعدي"
               class="doctor-img"
             />
@@ -784,6 +781,9 @@
               <li><a href="emergency.html">قسم الطوارئ</a></li>
               <li><a href="surgery.html">قسم الجراحة</a></li>
               <li><a href="orthopedics.html">قسم العظام</a></li>
+              <li><a href="pediatrics.html">قسم الأطفال</a></li>
+              <li><a href="radiology.html">قسم الأشعة</a></li>
+              <li><a href="laboratory.html">المختبر والتحاليل</a></li>
             </ul>
           </div>
 
